<resources>
    <string name="app_name">AndroidFundamentals3</string>
    <string name="mono">Mono</string>
    <string name="ratepets">Rate Pets</string>
    <string name="Contactos">Contactos</string>
    <string name="Acercade">Acerca De</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviarcomentario">Enviar Comentario</string>
    <string name="Bio">Bio Del Desarrollador</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>