<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:id="@+id/bio"
            android:layout_height="wrap_content"
            android:hint="@string/Bio"
            android:layout_width="fill_parent"
            android:autofillHints="@string/Bio"
            android:paddingTop="?attr/actionBarSize"
            android:textSize="24sp"
            >

        </TextView>


        <TextView
            android:id="@+id/loremipsum"
            android:layout_height="wrap_content"
            android:text="@string/LoremIpsum"
            android:lines="20"
            android:textSize="20sp"
            android:layout_width="fill_parent"
            android:autofillHints="@string/mensaje">
        </TextView>

    </LinearLayout>

</RelativeLayout>